# nlp-lab

./: .env.example  .gitignore  6_prd_audit_2026-02-15.md  AGENTS.md  README.md  alembic.ini  pyproject.toml
.github/workflows/: check.yml
alembic/: env.py  script.py.mako
alembic/versions/: 4b08cbb499e2_add_multilingual_fields_to_project_.py  8bb452b5f586_init_schema.py  ce87631b7c22_add_member_multilingual_fields.py
app/: main.py
app/core/: config.py  constants.py  security.py
app/db/: init_db.py  session.py
app/models/: __init__.py  admin_user.py  member.py  post.py  project.py  publication.py
app/repositories/: member_repo.py  post_repo.py  project_repo.py  publication_repo.py
app/routers/: admin_auth.py  admin_member.py  admin_post.py  admin_project.py  admin_publication.py  public.py
app/schemas/: auth.py  member.py  post.py  project.py  publication.py
app/services/: auth_service.py  member_service.py  post_service.py  project_service.py  publication_service.py
app/static/css/: admin.css  common.css  public.css  reset.css
app/static/js/: admin_forms.js  hero_slider.js  publications_filter.js
app/templates/: base.html
app/templates/admin/: dashboard.html  login.html  members.html  posts.html  projects.html  publications.html
app/templates/public/: contact.html  home.html  members.html  (+3 more)
scripts/: ensure_https_cert.sh  serve_https.sh
skills/nlp-lab-maintainer/: SKILL.md
skills/nlp-lab-ui-maintainer/: SKILL.md
tests/: test_admin_auth.py  test_admin_content_crud.py  test_https_scripts.py  test_member_crud.py  test_public_routes.py
(+1 files in other folders)
