[project]
name = "nlp-lab"
version = "0.1.0"
description = "NLP Lab website"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.115,<0.116",
  "uvicorn>=0.34,<0.35",
  "jinja2>=3.1,<3.2",
  "sqlmodel>=0.0.22,<0.1",
  "sqlalchemy>=2.0.37,<2.1",
  "alembic>=1.14,<1.15",
  "passlib[bcrypt]>=1.7.4,<1.8",
  "python-multipart>=0.0.20,<0.1",
  "pydantic-settings>=2.7,<2.8",
]

[dependency-groups]
dev = [
  "poethepoet>=0.31,<0.32",
  "ruff>=0.9,<1.0",
  "ty>=0.0.1,<0.1",
  "pytest>=8.3,<8.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[tool.poe]
env = { UV_CACHE_DIR = ".uv-cache" }

[tool.poe.tasks]
serve = "uvicorn app.main:app --reload"
migrate = "alembic upgrade head"
migration = "alembic revision --autogenerate -m ${MSG}"
init-admin = "python -c \"from app.db.init_db import create_initial_admin; create_initial_admin()\""
lint = "ruff check ."
format = "ruff format ."
typecheck = "ty check"
test = "pytest -q"
check = ["lint", "typecheck", "test"]
